@@ -1,3 +1,8 @@
+2009-06-25  Elliott Baron  <ebaron@redhat.com>
+
+	* MassifHeapTreeNode.java (MassifHeapTreeNode): Handle ??? symbol case. 
+	* MassifParser.java (parseFunction): Likewise.
+
 2009-06-23  Elliott Baron  <ebaron@redhat.com>
 
 	* MassifToolPage.java (getMaxSnapshotsSpinner): Added getter.
